src/test/ui/issues/issue-47073-zero-padded-tuple-struct-indices.stderr
error[E0308]: mismatched types
  --> $DIR/issue-47073-zero-padded-tuple-struct-indices.rs:7:33
   |
LL |     let justice = Verdict(true, Some(2718));
   |                                 ^^^^^^^^^^ expected FineDollars (u32), found u32
   |
   = note: expected type `std::option::Option<type FineDollars>`
              found type `std::option::Option<u32>`

error[E0609]: no field `00` on type `Verdict`
  --> $DIR/issue-47073-zero-padded-tuple-struct-indices.rs:8:30
   |
LL |     let _condemned = justice.00;
   |                              ^^ help: a field with a similar name exists: `0`

error[E0609]: no field `001` on type `Verdict`
  --> $DIR/issue-47073-zero-padded-tuple-struct-indices.rs:10:31
   |
LL |     let _punishment = justice.001;
   |                               ^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.
